--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "expresslearn",
+  "name": "chatapp",
   "version": "1.0.0",
   "description": "learning express",
-  "main": "index.js",
+  "main": "logsign.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"node logsign.js",
